リンクを修正

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <footer>
     <a href="https://app.tanukizzan.com">Other Apps</a>
-    <a href="https://github.com/tanukizzan/gaty-search/">GitHub</a>
+    <a href="https://github.com/tanukizzan/douze">GitHub</a>
   </footer>
 
   <script src="./script.js"></script>
